--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,10 +2,6 @@
 # project specific logic here.
 #
 cmake_minimum_required (VERSION 3.24)
-set(CMAKE_CXX_STANDARD 23)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-set_property(GLOBAL PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
@@ -17,7 +13,9 @@ project ("hello-gl")
 
 # libs
 include(FetchContent)
-#find_package(glfw3)
+find_package(gl3w CONFIG REQUIRED)
+find_package(glfw3 CONFIG REQUIRED)
+find_package(glbinding CONFIG REQUIRED)
 #find_package(glbinding)
 #find_package(raylib CONFIG REQUIRED)
 #FetchContent_Declare(
@@ -25,12 +23,19 @@ include(FetchContent)
 #	GIT_REPOSITORY https://github.com/RobLoach/raylib-cpp.git
 #)
 #FetchContent_MakeAvailable(raylib_cpp)
-find_package(GLUT REQUIRED)
+add_subdirectory(redbook_lib)
 
+set(CMAKE_CXX_STANDARD 23)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set_property(GLOBAL PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
 # Add source to this project's executable.
-add_executable (hello-gl "hello-gl.cpp" "include/glad.h")
-target_link_libraries(hello-gl PRIVATE GLUT::GLUT)
+add_executable (hello-gl "hello-gl.cpp")
+target_link_libraries(hello-gl PRIVATE redbook_lib unofficial::gl3w::gl3w glfw glbinding::glbinding)
 
 
-# TODO: Add tests and install targets if needed.
+# copy shaders
+add_custom_command(
+	TARGET hello-gl	COMMAND ${CMAKE_COMMAND} -E copy_directory 
+	"${CMAKE_SOURCE_DIR}/shaders" "$<TARGET_FILE_DIR:hello-gl>"
+)
