--- a/redbook_lib/CMakeLists.txt
+++ b/redbook_lib/CMakeLists.txt
@@ -2,13 +2,13 @@ cmake_minimum_required(VERSION 3.24)
 
 project(redbook_lib)
 
-find_package(gl3w CONFIG REQUIRED)
+find_package(glbinding CONFIG REQUIRED)
 
-add_library(redbook_lib)
-target_link_libraries(redbook_lib PRIVATE unofficial::gl3w::gl3w)
-
+add_library(redbook_lib STATIC)
 target_sources(redbook_lib PRIVATE src/LoadShaders.cpp)
-target_sources(redbook_lib INTERFACE include/LoadShaders.h include/vgl.h)
+target_sources(redbook_lib PRIVATE include/LoadShaders.h include/vgl.h)
 target_include_directories(redbook_lib PRIVATE include)
+target_link_libraries(redbook_lib PRIVATE glbinding::glbinding)
+
 
 set_target_properties(redbook_lib PROPERTIES LINKER_LANGUAGE CXX)
