doublew colored triangles & proper modern C++ refactoring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 ﻿# CMakeList.txt : CMake project for hello-gl, include source and define
 # project specific logic here.
 #
-cmake_minimum_required (VERSION 3.24)
+cmake_minimum_required (VERSION 3.19)
 
 # Enable Hot Reload for MSVC compilers if supported.
 if (POLICY CMP0141)
@@ -23,14 +23,19 @@ find_package(glbinding CONFIG REQUIRED)
 #)
 #FetchContent_MakeAvailable(raylib_cpp)
 add_subdirectory(redbook_lib)
+add_subdirectory(gl_abstractions)
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(GLOBAL PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
 
 # Add source to this project's executable.
-add_executable (hello-gl "hello-gl.cpp")
-target_link_libraries(hello-gl PRIVATE redbook_lib glbinding::glbinding glfw)
+add_executable (hello-gl)
+target_sources(hello-gl PRIVATE "hello-gl.cpp")
+
+target_link_libraries(hello-gl PRIVATE gl_abstractions redbook_lib glbinding::glbinding glfw)
+target_include_directories(hello-gl PRIVATE "gl_abstractions/include" "redbook_lib/include")
+
 if(MSVC)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT hello-gl)
 endif()
