--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -38,6 +38,12 @@
       "inheritEnvironments": [ "clang_cl_x64_x64", "project_base" ]
     },
     {
+      "name": "x64-Clang-Release",
+      "generator": "Visual Studio 17 2022 Win64",
+      "configurationType": "Release",
+      "inheritEnvironments": [ "clang_cl_x64_x64", "project_base" ]
+    },
+    {
       "name": "Mingw64-Debug",
       "generator": "Ninja",
       "configurationType": "Debug",
